--- a/roles/webserver/tasks/deplibs.yml
+++ b/roles/webserver/tasks/deplibs.yml
@@ -7,6 +7,7 @@
     - 'nodejs'
     - 'libmagick++-dev'
     - 'imagemagick'
+    - 'libpq-dev'
 
 - name: Install bundler
   shell: /usr/local/rbenv/shims/gem install bundler
