--- a/roles/dbserver/handlers/main.yml
+++ b/roles/dbserver/handlers/main.yml
@@ -1,12 +1,13 @@
 ---
-- name:       'restart PostgreSQL'
+
+- name: restart PostgreSQL
   service:
-    name:     'postgresql'
-    state:    'restarted'
+    name: 'postgresql'
+    state: 'restarted'
     arguments: '{{pg_version}}'
 
-- name: 'start PostgreSQL'
+- name: start PostgreSQL
   service:
-    name:   'postgresql'
-    state:   'started'
+    name: 'postgresql'
+    state: 'started'
     arguments: '{{pg_version}}'
